name:                pretty-error
version:             0.1.0.0
category:            Error Handling
synopsis:            Pretty error messages for runtime invariants
description:         Sometimes you need to assume something at runtime that you can't prove in the
                     type system. When you do that, you should make sure you get a good error
                     message if ever your assumption turns out to be wrong. That's what this library
                     is for.
                     .
                     Use the functions in here to get high quality error messages for when your
                     invariants don't hold at runtime. The functions all pretty print any Haskell
                     values given to them, which makes it easier to understand what's going on when
                     your code breaks.
                     .
                     == Examples
                     .
                     >>> assertRight "Example message" (Right 42)
                     42
                     .
                     >>> assertRight "Example message" (Left "unexpected error")
                     *** Exception: Example message: "unexpected error"
                     .
                     >>> fromRight (Left ["foo","bar","baz"])
                     *** Exception: [ "foo" , "bar" , "baz" ]
homepage:            https://github.com/jml/pretty-error
license:             Apache-2.0
license-file:        LICENSE
author:              Jonathan M. Lange
maintainer:          jml@mumak.net
copyright:           (c) 2015 Jonathan M. Lange
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   PrettyError
  build-depends:       base >= 4 && < 5
                     , basic-prelude
                     , bytestring
                     , pretty-show
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
